--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "convert-excel-to-json": "^1.7.0",
+    "moment": "^2.29.2",
     "rollup": "^2.3.4",
     "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-css-only": "^3.1.0",
@@ -22,8 +24,6 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.3",
-    "convert-excel-to-json": "^1.7.0",
-    "sirv-cli": "^2.0.0",
-    "sveltestrap": "^5.9.0"
+    "sirv-cli": "^2.0.0"
   }
 }
